Configuring speed thresholds
To accomodate slower operation on Java release before 8, reducing
threshold to 60% for Java 6 and 7.